Unification of variable name format.

--- a/mixins/_font-face.scss
+++ b/mixins/_font-face.scss
@@ -17,19 +17,19 @@
 @mixin font-face($font-family, $file-path, $font-style: normal, $font-weight: normal, $formats: eot svg woff2 woff ttf) {
     $src: null;
 
-    $formatMods: (
+    $formats-mods: (
         eot: "?",
         svg: "#" + $font-family
     );
 
-    $formatTypes: (
+    $format-types: (
         ttf: "truetype"
     );
 
     @each $format in $formats {
-        $formatMod: if(map-has-key($formatMods, $format), $format + map-get($formatMods, $format), $format);
-        $formatType: if(map-has-key($formatTypes, $format), map-get($formatTypes, $format), $format);
-        $src: append($src, url("#{$file-path}.#{$formatMod}") format("#{$formatType}"), comma);
+        $format-mod: if(map-has-key($formats-mods, $format), $format + map-get($formats-mods, $format), $format);
+        $format-type: if(map-has-key($format-types, $format), map-get($format-types, $format), $format);
+        $src: append($src, url("#{$file-path}.#{$format-mod}") format("#{$format-type}"), comma);
     }
 
     @font-face {
