--- a/mixins/_gradient.scss
+++ b/mixins/_gradient.scss
@@ -5,39 +5,39 @@
 //
 // Parameters:
 //  - $angle: gradient orientation, "vertical" or "horizontal"
-//  - $startColor: starting color in HEX or RGBa
-//  - $endColor: ending color in HEX or RGBa
-//  - $startLocation: starting percentage (0% by default)
-//  - $endLocation: ending percentage (100% by default)
+//  - $start-color: starting color in HEX or RGBa
+//  - $end-color: ending color in HEX or RGBa
+//  - $start-location: starting percentage (0% by default)
+//  - $end-location: ending percentage (100% by default)
 //  - $prefixes: boolean/array choose the prefix you want to use (default: -moz- -webkit- -o-)
-//  - $ieFilter: boolean (false by default), using for IE7+. Important for IE9!
+//  - $ie-filter: boolean (false by default), using for IE7+. Important for IE9!
 //
 // ============================================================================================= //
 
-@mixin gradient($angle, $startColor, $endColor, $startLocation: 0%, $endLocation: 100%, $prefixes: -moz- -webkit- -o-, $ieFilter: false) {
+@mixin gradient($angle, $start-color, $end-color, $start-location: 0%, $end-location: 100%, $prefixes: -moz- -webkit- -o-, $ie-filter: false) {
     $gradient: linear;
-    $angleOld: null;
-    $angleNorm: null;
-    $ieType: null;
+    $angle-old: null;
+    $angle-norm: null;
+    $ie-type: null;
 
     @if $angle == "vertical" {
-        $angleOld: top;
-        $angleNorm: to bottom;
-        $ieType: 0;
+        $angle-old: top;
+        $angle-norm: to bottom;
+        $ie-type: 0;
     } @else if $angle == "horizontal" {
-        $angleOld: left;
-        $angleNorm: to right;
-        $ieType: 1;
+        $angle-old: left;
+        $angle-norm: to right;
+        $ie-type: 1;
     }
 
-    background: #{$gradient}-gradient($angleNorm, $startColor $startLocation, $endColor $endLocation);
+    background: #{$gradient}-gradient($angle-norm, $start-color $start-location, $end-color $end-location);
     @if $prefixes {
         @each $prefix in $prefixes {
-            background: #{$prefix}#{$gradient}-gradient($angleOld, $startColor $startLocation, $endColor $endLocation);
+            background: #{$prefix}#{$gradient}-gradient($angle-old, $start-color $start-location, $end-color $end-location);
         }
     }
 
-    @if $ieFilter {
-        filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#{$startColor}', endColorstr='#{$endColor}', GradientType=#{$ieType});
+    @if $ie-filter {
+        filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#{$start-color}', endColorstr='#{$end-color}', GradientType=#{$ie-type});
     }
 }
