--- a/functions/_em.scss
+++ b/functions/_em.scss
@@ -1,7 +1,7 @@
 // ============================================================================================= //
 // Function: em
 //
-// Description: font size in EM
+// Description: font size in EM.
 //
 // Parameters:
 //  - $target: size number
