--- a/functions/_rem.scss
+++ b/functions/_rem.scss
@@ -1,7 +1,7 @@
 // ============================================================================================= //
 // Function: rem
 //
-// Description: font size in REM
+// Description: font size in REM.
 //
 // Parameters:
 //  - $target: size number
