--- a/mixins/_font-face.scss
+++ b/mixins/_font-face.scss
@@ -1,9 +1,9 @@
 // ============================================================================================= //
 // Mixin: font-face
 //
-// Description: generates a "font-face" with all formats of web fonts
+// Description: generates a "font-face" with all formats of web fonts.
 //
-// Compatibility: IE 7+, Firefox 4+, Chrome 1+, Safari 5+, Opera 15+
+// Compatibility: IE 7+, Firefox 4+, Chrome 1+, Safari 5+, Opera 15+.
 //
 // Parameters:
 //  - $font-family: name for the "font-family" parameter
