--- a/mixins/_gradient.scss
+++ b/mixins/_gradient.scss
@@ -1,7 +1,7 @@
 // ============================================================================================= //
 // Mixin: gradient
 //
-// Description: create simple linear gradient
+// Description: create simple linear gradient.
 //
 // Parameters:
 //  - $angle: gradient orientation, "vertical" or "horizontal"
