--- a/mixins/_grid.scss
+++ b/mixins/_grid.scss
@@ -1,16 +1,16 @@
 // ============================================================================================= //
 // Mixin: grid();
 //
-// Description: generate your grid
+// Description: generate your grid.
 //
-// Compatibility: IE 7+, Firefox 5+, Chrome 20+, Safari 5+, Opera 10+
+// Compatibility: IE 7+, Firefox 5+, Chrome 20+, Safari 5+, Opera 10+.
 //
 // Parameters:
 //  - $column: number of columns
 //  - $prefix: boolean
 //  - $css-base: boolean
 //
-// Dependencie:
+// Dependency:
 //  - Mixin: _breakpoint.scss
 //
 // ============================================================================================= //
