--- a/mixins/_opacity.scss
+++ b/mixins/_opacity.scss
@@ -1,9 +1,9 @@
 // ============================================================================================= //
 // Mixin: opacity
 //
-// Description: generate opacity for Interet Explorer and recents browsers in same time
+// Description: generate opacity for Internet Explorer and recent browsers in same time.
 //
-// Compatibility: IE 7+, Firefox 4+, Chrome 1+, Safari 5+, Opera 15+
+// Compatibility: IE 7+, Firefox 4+, Chrome 1+, Safari 5+, Opera 15+.
 //
 // Parameter:
 //  - $alpha: number alpha between 0 and 1
