--- a/mixins/_rem-size.scss
+++ b/mixins/_rem-size.scss
@@ -1,12 +1,12 @@
 // ============================================================================================= //
 // Mixin: rem-size
 //
-// Description: add "font-size" in REM for all recent browsers and in PX for IE7/8
+// Description: add "font-size" in REM for all recent browsers and in PX for IE7/8.
 //
 // Parameter:
 //  - $size: size number
 //
-// Dependencie:
+// Dependency:
 //  - Function: _rem.scss
 //
 // ============================================================================================= //
