--- a/mixins/_selection.scss
+++ b/mixins/_selection.scss
@@ -1,7 +1,7 @@
 // ============================================================================================= //
 // Mixin: selection
 //
-// Description: change the mouse selection style
+// Description: change the mouse selection style.
 //
 // Parameters:
 //  - $background: background color in HEX or RGBa
