--- a/mixins/_retina.scss
+++ b/mixins/_retina.scss
@@ -1,5 +1,5 @@
 // =============================================================================================== //
-// WARNING: Use this mixin that if you use another library that Compass, like LibSass for example,
+// WARNING: Use this mixin if you use another library that Compass, like LibSass for example,
 //          to generate Sass files !!!
 //
 // Mixin: retina
