--- a/_helpers.scss
+++ b/_helpers.scss
@@ -23,13 +23,13 @@
 // ------------------------------------------------------------------------- //
 
 .clearfix {
-    &:before,
-    &:after {
+    &::before,
+    &::after {
         content: " ";
         display: table;
     }
 
-    &:after {
+    &::after {
         clear: both;
     }
 
