--- a/mixins/_opacity.scss
+++ b/mixins/_opacity.scss
@@ -15,7 +15,9 @@
 
     @if $oldie {
         filter: alpha(opacity=#{$alpha-ie});
-    } @else {
+    }
+
+    @else {
         opacity: $alpha;
     }
 }
