--- a/mixins/_opacity.scss
+++ b/mixins/_opacity.scss
@@ -15,9 +15,7 @@
 
     @if $oldie {
         filter: alpha(opacity=#{$alpha-ie});
-    }
-
-    @else {
+    } @else {
         opacity: $alpha;
     }
 }
