--- a/mixins/_rem-size.scss
+++ b/mixins/_rem-size.scss
@@ -14,9 +14,7 @@
 @mixin rem-size($size) {
     @if $oldie {
         font-size: $size * 1px;
-    }
-
-    @else {
+    } @else {
         font-size: rem($size);
     }
 }
